--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,8 @@ header {
 /* main */
 
 main {
-  min-width: 35%;
+  min-width: 45%;
+  max-width: 90%;
   min-height: 10rem;
   border-radius: 2%;
   background-color: var(--clr-white);
@@ -53,9 +54,11 @@ main {
   color: var(--clr-dark);
 }
 .container {
-  min-width: 80%;
+  min-width: 85%;
+  max-width: 90%;
+  margin: 0 auto;
   height: 100%;
-  padding: 0.8rem;
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -63,7 +66,7 @@ main {
 .input-control {
   display: flex;
   flex-direction: column;
-  padding: 0.8rem;
+  padding: 0.5rem;
 }
 
 .input-control label {
@@ -100,7 +103,8 @@ main {
 }
 
 .success-message {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  font-weight: bold;
   text-align: center;
   color: green;
 }
